--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "paypal-rest-sdk": "^1.8.1"
+    "express": "^4.17.1"
   }
 }
